# Argus-Ultimate-main

./: .dockerignore  .mypy_ignore_baseline  ADAPTATION_BEYOND_OMEGA.md  ADAPTATION_MECHANISM_EXPLAINED.md  ADVANTAGE_CATALOG.py  ALL_ADAPTATION_SYSTEMS.md  ALL_QUANTUM_IMPROVEMENTS_COMPLETE.md  ARCHITECTURE_OPTIMIZATION_ANALYSIS.md  ARGUS_2026_IMPROVEMENTS.md  ARGUS_BEYOND_OMEGA.md  ARGUS_HIGHEST_STANDARD_IMPROVEMENTS.md  ARGUS_IMPROVEMENTS_COMPLETE.md  ARGUS_IMPROVEMENT_ROADMAP.md  AUSTRALIAN_EXCHANGES_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_CODEBASE_INVENTORY.md  COMPLETE_IBM_CAPABILITY_MAP.md  CONTINUOUS_EVOLUTION_GUIDE.md  CONTRIBUTING.md  Dockerfile  ENTRYPOINTS.md  FULL_SYSTEM_WIRING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPROVEMENTS.md  LEGACY.md  META_IMPROVEMENT_GUIDE.md  Makefile  PAPER_TRADING_QUICKSTART.md  PATCH_ACTIVATION.md  PERFORMANCE_PROJECTION_1K_REAL.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE3_IMPLEMENTATION_STATUS.md  PREDICT_ADAPT_LEARN_INVENTORY.md  QUANTUM_ADAPTATION_INTEGRATION_GUIDE.md  QUANTUM_IBM_OPTIMAL_WIRING.md  QUANTUM_SIMULATOR_EVOLUTION.md  README.md  REALITY_CHECK_AND_NEXT_STEPS.md  (+37 more)
.claude/: settings.local.json
.github/: pull_request_template.md  renovate.json
Argus-Ultimate-main-main/: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  ADAPTATION_CONNECTION_AUDIT.md  ALL_IMPROVEMENTS_COMPLETE.md  API_SETUP_GUIDE.md  ARCHITECTURE.md  ARGUS_1K_PERFORMANCE_PROJECTION.md  ARGUS_2026_IMPLEMENTATION_COMPLETE.md  ARGUS_CURRENT_STATUS_HONEST.md  ARGUS_FREE_ENHANCEMENTS_COMPLETE.md  ARGUS_REAL_MARKET_PERFORMANCE.md  ARGUS_REMAINING_OPPORTUNITIES.md  ARGUS_SYDNEY_CONFIG.md  ARGUS_WIRING_CHECKLIST.md  AUSTRALIAN_EXCHANGES_FEES.md  BEST_TRADING_PAIRS.md  CLEANUP_REPORT.md  COINSPOT_SYDNEY_GUIDE.md  COMPLETE_50_SYSTEMS_SUMMARY.md  COMPLETE_ARGUS_OMEGA_62_SYSTEMS.md  COMPLETE_IBM_ENHANCEMENT_MAP.md  COMPLETE_WIRING_SUMMARY.md  Dockerfile.dev  Dockerfile.execution  FINAL_PERFORMANCE_REPORT.py  GITHUB_UPDATE_SUMMARY.md  GIT_COMMIT_COMMANDS.txt  IMPLEMENTATION_COMPLETE_ALL_PHASES.md  IMPROVEMENTS_IMPLEMENTATION_STATUS.md  LICENSE  MAXIMUM_ADVANTAGE_GUIDE.md  PERFORMANCE_1K_FULLY_WIRED.md  QUANTUM_ENHANCED_ADAPTATION_GUIDE.md  QUANTUM_IMPROVEMENTS_GUIDE.md  QUANTUM_TOP3_IMPROVEMENTS_COMPLETE.md  (+33 more)
Argus-Ultimate-main-main/multilang/services/haskell/: argus-haskell.cabal
Argus-Ultimate-main-main/sidecar/: Cargo.toml
Argus-Ultimate-main-main/sidecar/src/: main.rs
adaptive/: __init__.py  adaptive_risk_controller.py  adaptive_strategy_selector.py  adaptive_strategy_switcher.py  adaptive_trading.py  advanced_adaptation.py  advanced_adaptive_features.py  auto_capital_allocator.py  auto_strategy_manager.py  correlation_regime_detector.py  dynamic_parameter_optimizer.py  event_calendar.py  event_reactor.py  hierarchical_adaptor.py  hybrid_forecaster.py  market_adaptation.py  market_microstructure_engine.py  market_regime_detector.py  max_adaptive_system.py  omega_adaptation.py  omega_adaptation_v2.py  omega_adaptive.py  (+11 more)
multilang/workers/cpp_orderbook/: CMakeLists.txt  bridge.py  build.bat  orderbook.cpp
multilang/workers/rust_engine/: Cargo.toml
multilang/workers/rust_engine/src/: main.rs
(+3387 files in other folders)
