cabal-version:      3.0
name:               argus-haskell
version:            1.0.0
synopsis:           Argus trading system HTTP microservice – Haskell (correctness role)
description:
  Implements 20 trading-domain task types exposed over a Warp/WAI HTTP
  server.  Language profile: correctness, risk_max_ratio=0.40,
  min_confidence_to_accept=0.62, slippage_tolerance_bps=55.
license:            MIT
author:             Argus
maintainer:         argus@example.com
build-type:         Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wno-name-shadowing

executable argus-haskell
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >= 4.18  && < 5
    , aeson                 >= 2.1   && < 2.3
    , bytestring            >= 0.11  && < 0.13
    , text                  >= 2.0   && < 2.2
    , containers            >= 0.6   && < 0.8
    , warp                  >= 3.3   && < 3.5
    , wai                   >= 3.2   && < 3.3
    , http-types            >= 0.12  && < 0.13
    , cryptohash-sha256     >= 0.11  && < 0.12
    , time                  >= 1.12  && < 1.15
    , scientific            >= 0.3   && < 0.4
    , vector                >= 0.13  && < 0.14
    , unordered-containers  >= 0.2   && < 0.3
